Disable debug symbols on release builds.

--- a/lib/CustomFontDialog/CustomFontDialog/CustomFontDialog.csproj
+++ b/lib/CustomFontDialog/CustomFontDialog/CustomFontDialog.csproj
@@ -5,6 +5,10 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="PolySharp" Version="1.14.1" PrivateAssets="all" />
   </ItemGroup>
