--- a/src/LiveSplit.Register/LiveSplit.Register.csproj
+++ b/src/LiveSplit.Register/LiveSplit.Register.csproj
@@ -7,6 +7,10 @@
     <TargetFramework>net4.8.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="$(SrcPath)\LiveSplit.Core\LiveSplit.Core.csproj" />
   </ItemGroup>
